# iftoprs

./: .gitignore  Cargo.toml  Cross.toml  README.md  iftoprs.default.conf
.github/workflows/: ci.yml  release.yml
completions/: _iftoprs
docs/: index.html  report.html
man/man1/: iftoprs.1  iftoprsall.1
src/: lib.rs  main.rs
src/capture/: mod.rs  parser.rs  sniffer.rs
src/config/: cli.rs  mod.rs  prefs.rs  theme.rs
src/data/: flow.rs  history.rs  mod.rs  tracker.rs
src/ui/: app.rs  mod.rs  render.rs
src/util/: format.rs  mod.rs  procinfo.rs  provenance.rs  resolver.rs
tests/: adversarial_format_parse.rs  cli_extra.rs  contract_args_independence_round4.rs  contract_net_filter_edges.rs  contract_resolver_netfilter_theme.rs  filter_state_multibyte_whitespace.rs  filter_state_unicode_edge.rs  integration.rs
tests/fixtures/: minimal_etc_services.txt
