[package]
name = "iftoprs"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
dns-lookup = "3.0.1"
pcap = "2.4.0"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
clap_complete = "4"

[profile.release]
opt-level = 3
lto = true
strip = true
