[package]
name = "iftoprs"
version = "2.22.2"
edition = "2024"
description = "Real-time bandwidth monitor — iftop clone in Rust with ratatui TUI, 31 themes, process attribution, mouse support"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/iftoprs"
keywords = ["network", "bandwidth", "monitor", "tui", "iftop"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
dns-lookup = "3.0.1"
pcap = "2.4.0"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51.0", features = ["full"] }
toml = "1.1.2"
clap_complete = "4"

[profile.release]
opt-level = 3
lto = true
strip = true
