[package]
name = "iftoprs"
version = "2.22.10"
edition = "2024"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
description = "Real-time bandwidth monitor — iftop clone in Rust with ratatui TUI, 31 themes, process attribution, mouse support"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/iftoprs"
homepage = "https://menketechnologies.github.io/iftoprs/"
documentation = "https://docs.rs/iftoprs"
keywords = ["network", "bandwidth", "monitor", "tui", "iftop"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
dns-lookup = "3.0.1"
pcap = "2.4.0"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51.0", features = ["full"] }
toml = "1.1.2"
clap_complete = "4"

# macOS process attribution: native libproc syscalls (proc_listpids /
# proc_pidfdinfo). Compiled into the single binary — no external `lsof` at
# runtime. Linux uses /proc directly and needs no extra crate.
#
# macOS provenance attribution (Publishers view): the Security framework reads
# the on-disk code signature (Team ID + authority) via SecStaticCode. Apple's
# own, durable framework — vendored through the `security-framework` crate and
# its CoreFoundation glue. Linux provenance is std-only (dpkg/rpm + a pure-Rust
# SHA-256), so it needs no extra crate.
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"
security-framework = "2.11"
core-foundation = "0.9"
core-foundation-sys = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
